--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 appdirs==1.4.0
 click==6.7
+enum-compat==0.0.2
+enum34==1.1.6
+eventlet==0.20.1
 Flask==0.12
 Flask-SocketIO==2.8.2
+greenlet==0.4.12
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.9.5
 MarkupSafe==0.23
 packaging==16.8
 peewee==2.8.5
-pkg-resources==0.0.0
+psycopg2==2.6.2
 pyparsing==2.1.10
 python-engineio==1.1.2
 python-socketio==1.6.3
