--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,25 @@ enum34==1.1.6
 eventlet==0.20.1
 Flask==0.12
 Flask-SocketIO==2.8.2
+google-api-python-client==1.6.1
 greenlet==0.4.12
 gunicorn==18.0
+httplib2==0.10.3
 itsdangerous==0.24
 Jinja2==2.9.5
+lxml==3.7.2
 MarkupSafe==0.23
+oauth2client==4.0.0
 packaging==16.8
 peewee==2.8.5
 psycopg2==2.6.2
+pyasn1==0.2.2
+pyasn1-modules==0.0.8
 pyparsing==2.1.10
 python-engineio==1.1.2
 python-socketio==1.6.3
+requests==2.13.0
+rsa==3.4.2
 six==1.10.0
+uritemplate==3.0.0
 Werkzeug==0.11.15
-google-api-python-client
-requests
-lxml
